--- a/index.html
+++ b/index.html
@@ -1,163 +1,185 @@
 <!DOCTYPE html>
 <html lang="bn">
-  <head>
-     <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--Tailwind-->
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Voter Information Search</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <style>
-      body {
-        font-family: "Segoe UI", sans-serif;
-        background: #f2f4f7;
-      }
+  <title>ভোটার তথ্য অনুসন্ধান</title>
 
-      .container {
-        max-width: 800px;
-        margin: 40px auto;
-        background: white;
-        padding: 25px;
-        border-radius: 8px;
-      }
+  <!-- Tailwind -->
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-      input {
-        width: 100%;
-        padding: 12px;
-        font-size: 16px;
-        margin-bottom: 20px;
-      }
+  <style>
+    body {
+      font-family: "Segoe UI", system-ui, sans-serif;
+    }
+    mark {
+      background-color: #fde68a;
+      padding: 0 2px;
+      border-radius: 3px;
+    }
+  </style>
+</head>
 
-      .card {
-        border: 1px solid #ddd;
-        padding: 15px;
-        margin-bottom: 15px;
-        border-radius: 6px;
-        background: #fafafa;
-      }
+<body class="bg-gray-100 min-h-screen">
 
-      .card span {
-        display: block;
-        margin-bottom: 4px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>ভোটার তথ্য অনুসন্ধান</h1>
+  <div class="max-w-4xl mx-auto p-4">
 
-      <input
-        type="text"
-        id="searchInput"
-        placeholder="নাম / ভোটার নং / পেশা / এলাকা দিয়ে খুঁজুন"
-      />
+    <!-- Header -->
+    <h1 class="text-2xl font-bold text-center mb-4">
+      ভোটার তথ্য অনুসন্ধান
+    </h1>
 
-      <div id="results"></div>
-    </div>
+    <!-- Search -->
+    <input
+      id="searchInput"
+      type="text"
+      placeholder="নাম / ভোটার নং / পেশা / এলাকা লিখুন"
+      class="w-full p-3 rounded-lg border mb-4 text-lg"
+    />
 
-    <script>
+    <!-- Info -->
+    <p id="infoText" class="text-center text-gray-600 mb-4"></p>
+
+    <!-- Results -->
+    <div id="results" class="space-y-4"></div>
+
+    <!-- Pagination -->
+    <div id="pagination" class="flex justify-center gap-4 mt-6"></div>
+
+  </div>
+
+<script>
 let voters = [];
+let filteredVoters = [];
 let currentPage = 1;
 const perPage = 20;
 
 const searchInput = document.getElementById("searchInput");
 const results = document.getElementById("results");
+const pagination = document.getElementById("pagination");
+const infoText = document.getElementById("infoText");
 
-// ------------------
-// Render function with pagination
-// ------------------
-function renderVoters(list, page = 1) {
-  results.innerHTML = "";
-  currentPage = page;
-
-  if (list.length === 0) {
-    results.innerHTML = "<p>কোনো তথ্য পাওয়া যায়নি</p>";
-    return;
-  }
-
-  const start = (page - 1) * perPage;
-  const end = start + perPage;
-  const pageItems = list.slice(start, end);
-
-  pageItems.forEach((v) => {
-    const div = document.createElement("div");
-    div.className = "card";
-    div.innerHTML = `
-      <span><strong>নাম:</strong> ${v.name || "-"}</span>
-      <span><strong>ভোটার নং:</strong> ${v.voter_id || "-"}</span>
-      <span><strong>পিতা:</strong> ${v.father || "-"}</span>
-      <span><strong>মাতা:</strong> ${v.mother || "-"}</span>
-      <span><strong>পেশা:</strong> ${v.occupation || "-"}</span>
-      <span><strong>জন্ম তারিখ:</strong> ${v.date_of_birth || "-"}</span>
-      <span><strong>ঠিকানা:</strong> ${v.address || "-"}</span>
-    `;
-    results.appendChild(div);
-  });
-
-  // Pagination buttons
-  const totalPages = Math.ceil(list.length / perPage);
-  const paginationDiv = document.createElement("div");
-  paginationDiv.style.marginTop = "10px";
-  paginationDiv.style.textAlign = "center";
-
-  if (page > 1) {
-    const prevBtn = document.createElement("button");
-    prevBtn.textContent = "পূর্ববর্তী";
-    prevBtn.onclick = () => renderVoters(list, page - 1);
-    prevBtn.style.marginRight = "10px";
-    paginationDiv.appendChild(prevBtn);
-  }
-
-  if (page < totalPages) {
-    const nextBtn = document.createElement("button");
-    nextBtn.textContent = "পরবর্তী";
-    nextBtn.onclick = () => renderVoters(list, page + 1);
-    paginationDiv.appendChild(nextBtn);
-  }
-
-  results.appendChild(paginationDiv);
+// -----------------------
+// Highlight Bangla text
+// -----------------------
+function highlight(text, q) {
+  if (!text || !q) return text || "-";
+  return text.replaceAll(q, `<mark>${q}</mark>`);
 }
 
-// ------------------
-// Load JSON
-// ------------------
-fetch("voters.json")
-  .then((res) => res.json())
-  .then((data) => {
-    voters = data;
-    // Show a message if too many voters
-    if (voters.length > 500) {
-      results.innerHTML = "<p>অনুসন্ধানের জন্য নাম, ভোটার নং, পেশা বা ঠিকানা লিখুন।</p>";
-    } else {
-      renderVoters(voters); // small datasets only
-    }
-  });
+// -----------------------
+// Render voters
+// -----------------------
+function renderVoters() {
+  results.innerHTML = "";
+  pagination.innerHTML = "";
 
-// ------------------
-// Search logic (Bangla-friendly)
-// ------------------
-searchInput.addEventListener("input", () => {
-  const q = searchInput.value.trim();
-  if (q === "") {
-    if (voters.length > 500) {
-      results.innerHTML = "<p>অনুসন্ধানের জন্য নাম, ভোটার নং, পেশা বা ঠিকানা লিখুন।</p>";
-    } else {
-      renderVoters(voters);
-    }
+  if (filteredVoters.length === 0) {
+    results.innerHTML = "<p class='text-center'>কোনো তথ্য পাওয়া যায়নি</p>";
     return;
   }
 
-  const filtered = voters.filter(
-    (v) =>
-      (v.name && v.name.includes(q)) ||
-      (v.voter_id && v.voter_id.includes(q)) ||
-      (v.occupation && v.occupation.includes(q)) ||
-      (v.address && v.address.includes(q))
+  const start = (currentPage - 1) * perPage;
+  const end = start + perPage;
+  const pageItems = filteredVoters.slice(start, end);
+  const q = searchInput.value.trim();
+
+  pageItems.forEach(v => {
+    const card = document.createElement("div");
+    card.className = "bg-white rounded-xl shadow p-4";
+
+    card.innerHTML = `
+      <p><strong>নাম:</strong> ${highlight(v.name, q)}</p>
+      <p><strong>ভোটার নং:</strong> ${highlight(v.voter_id, q)}</p>
+      <p><strong>পিতা:</strong> ${v.father || "-"}</p>
+      <p><strong>মাতা:</strong> ${highlight(v.mother, q)}</p>
+      <p><strong>পেশা:</strong> ${highlight(v.occupation, q)}</p>
+      <p><strong>জন্ম তারিখ:</strong> ${v.date_of_birth || "-"}</p>
+      <p><strong>ঠিকানা:</strong> ${highlight(v.address, q)}</p>
+    `;
+
+    results.appendChild(card);
+  });
+
+  renderPagination();
+}
+
+// -----------------------
+// Pagination buttons
+// -----------------------
+function renderPagination() {
+  const totalPages = Math.ceil(filteredVoters.length / perPage);
+
+  if (totalPages <= 1) return;
+
+  if (currentPage > 1) {
+    const prev = document.createElement("button");
+    prev.textContent = "পূর্ববর্তী";
+    prev.className = "px-4 py-2 bg-gray-300 rounded";
+    prev.onclick = () => {
+      currentPage--;
+      renderVoters();
+    };
+    pagination.appendChild(prev);
+  }
+
+  const pageInfo = document.createElement("span");
+  pageInfo.textContent = `পৃষ্ঠা ${currentPage} / ${totalPages}`;
+  pageInfo.className = "px-3 py-2 text-gray-600";
+  pagination.appendChild(pageInfo);
+
+  if (currentPage < totalPages) {
+    const next = document.createElement("button");
+    next.textContent = "পরবর্তী";
+    next.className = "px-4 py-2 bg-gray-300 rounded";
+    next.onclick = () => {
+      currentPage++;
+      renderVoters();
+    };
+    pagination.appendChild(next);
+  }
+}
+
+// -----------------------
+// Load JSON
+// -----------------------
+fetch("voters.json")
+  .then(res => res.json())
+  .then(data => {
+    voters = data;
+    filteredVoters = [];
+    infoText.textContent = "অনুসন্ধানের জন্য উপরে লিখুন";
+  });
+
+// -----------------------
+// Search (Bangla-friendly)
+// -----------------------
+searchInput.addEventListener("input", () => {
+  const q = searchInput.value.trim();
+  currentPage = 1;
+
+  if (q === "") {
+    filteredVoters = [];
+    results.innerHTML = "";
+    pagination.innerHTML = "";
+    infoText.textContent = "অনুসন্ধানের জন্য উপরে লিখুন";
+    return;
+  }
+
+  filteredVoters = voters.filter(v =>
+    (v.name && v.name.includes(q)) ||
+    (v.voter_id && v.voter_id.includes(q)) ||
+    (v.father && v.father.includes(q)) ||
+    (v.mother && v.mother.includes(q)) ||
+    (v.occupation && v.occupation.includes(q)) ||
+    (v.address && v.address.includes(q))
   );
 
-  renderVoters(filtered, 1); // show first page of filtered results
+  infoText.textContent = `মোট ফলাফল: ${filteredVoters.length}`;
+  renderVoters();
 });
 </script>
 
-  </body>
+</body>
 </html>
