--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <input
       id="searchInput"
       type="text"
-      placeholder="নাম / ভোটার নং / পেশা / এলাকা লিখুন"
-      class="w-full p-3 rounded-lg border mb-4 text-lg"
+      placeholder="নাম লিখুন"
+      class="w-full p-3 rounded-lg border mb-4 text-lg bg-white"
     />
 
     <!-- Info -->
@@ -60,9 +60,7 @@ const results = document.getElementById("results");
 const pagination = document.getElementById("pagination");
 const infoText = document.getElementById("infoText");
 
-/* ===============================
-   Bangla Normalization (Search only)
-================================ */
+// Bangla Normalization (Search only)
 function normalizeBangla(text) {
   if (!text) return "";
 
@@ -79,9 +77,7 @@ function normalizeBangla(text) {
     .trim();
 }
 
-/* ===============================
-   Render voters (USES filteredVoters)
-================================ */
+//Render voters (USES filteredVoters)
 function renderVoters() {
   results.innerHTML = "";
   pagination.innerHTML = "";
@@ -115,9 +111,7 @@ function renderVoters() {
   renderPagination();
 }
 
-/* ===============================
-   Pagination
-================================ */
+//Pagination
 function renderPagination() {
   const totalPages = Math.ceil(filteredVoters.length / perPage);
   if (totalPages <= 1) return;
@@ -150,15 +144,13 @@ function renderPagination() {
   }
 }
 
-/* ===============================
-   Load JSON
-================================ */
+//Load JSON
 fetch("voters.json")
   .then(res => res.json())
   .then(data => {
     voters = data;
 
-    // 🔥 pre-normalize once (PERFORMANCE BOOST)
+    //pre-normalize once (PERFORMANCE BOOST)
     voters.forEach(v => {
       v._searchName = normalizeBangla(v.name || "");
     });
@@ -166,12 +158,9 @@ fetch("voters.json")
     filteredVoters = voters;
     renderVoters();
 
-    infoText.textContent = `মোট ভোটার: ${voters.length}`;
   });
 
-/* ===============================
-   Search (NAME ONLY)
-================================ */
+// Search (NAME ONLY)
 let timer;
 searchInput.addEventListener("input", () => {
   clearTimeout(timer);
